--- a/BidOnline-ejb/pom.xml
+++ b/BidOnline-ejb/pom.xml
@@ -26,6 +26,11 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.glassfish.main.extras</groupId>-->
+                <!--<artifactId>glassfish-embedded-web</artifactId>-->
+                <!--<version>3.1.2</version>-->
+            <!--</dependency>-->
         </dependencies>
 
     </dependencyManagement>
