--- a/BidOnline-war/src/main/webapp/WEB-INF/web.xml
+++ b/BidOnline-war/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
         <param-name>primefaces.THEME</param-name>
         <param-value>south-street</param-value>
     </context-param>
+    <!--<context-param>-->
+        <!--<param-name>javax.faces.CONFIG_FILES</param-name>-->
+        <!--<param-value>/WEB-INF/faces-config.xml,/WEB-INF/beans.xml</param-value>-->
+    <!--</context-param>-->
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
